# syntax

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.md  adt.py  auxtypes.py  ilist.py  lambda.py  mkdocs.yml  notes  pyproject.toml  requirements.txt  tox.ini
.github/actions/setup-poetry-env/: action.yml
ADT/: __init__.py  adt.py  adt_print.py  auxtypes.py  chk_functions.py  ilist.py
docs/: index.md  modules.md
examples/: lambda.py  lambdaImp.py
test/: #test_ueq_grammar.py#  conftest.py  test_egraph.py  test_immutability.py  test_mutual.py  test_ueq_grammar.py
tests/: conftest.py  test_attributes.py  test_egraph.py  test_foo.py  test_immutability.py  test_memoization.py  test_mutual.py  test_ueq_grammar.py  test_validation.py
