[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ADT"
version = "0.0.1"
authors = [
  { name="Teodoro F. Collin", email="teoc@mit.edu" },
]
description = "A package for writing ADTs in a pythonic way, mainly aimed at making IRs, DSLs, Compilers,etc"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wraith1995/syntax"
"Bug Tracker" = "https://github.com/wraith1995/syntax/issues"

