[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "syntax"
version = "0.0.4"
requires-python = ">=3.10"
description = "A package for writing ADTs in a pythonic way, mainly aimed at making IRs, DSLs, Compilers, etc."
authors = [{name = "Teodoro F. Collin", email = "teoc@mit.edu"}]
readme = "README.md"
dependencies = ["fastcore", "frozendict", "strongtyping",
"asdl", "black", "pytest", "pytest-cov", "deptry",
"pre-commit", "tox", "typing-extensions", "flake8", "yapf"]	

[project.optional-dependencies]
EGG=["snake-egg @ git+https://git@github.com/egraphs-good/snake-egg", "maturin"]

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.isort]
profile = "black"

[tool.mypy]
files = ["ADT"]
disallow_untyped_defs = "False"
disallow_any_unimported = "False"
no_implicit_optional = "True"
check_untyped_defs = "False"
warn_return_any = "False"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["ADT"]

[tool.deptry]
ignore_obsolete = [
        "black", "frozendict", "maturin", "strongtyping"
    ]
    ignore_transitive = [
        "adt"
    ]
